2014-07-08 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic14/pic1xxx.h,
	  device/non-free/lib/pic14/libdev/pic1xxx.c,
	  device/non-free/include/pic16/pic18fxxx.h,
	  device/non-free/lib/pic16/libdev/pic18fxxx.c:
	  updated

	* device/non-free/include/pic14/pic12f1571.h,
	  device/non-free/include/pic14/pic12f1572.h,
	  device/non-free/include/pic14/pic12f1612.h:
	  Added the missing _DEBUG_ON and _DEBUG_OFF config options.
	  (These Microchip bugs in original mpasmx includes.)

2014-07-07 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Unify all flag affection code to flag_cvh().

2014-07-06 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Merge inst_sub() to inst_sbc().

2014-07-03 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs in inst_dec(), inst_inc() & inst_ldxy(): flags affection.
          Make inst_addw(), inst_clr() & inst_ldxydst() more understandable.
        * sim/ucsim/stm8.src/stm8.cc:
          Fix potential bugs in CALLR & CALLF: the stack saved PC value is not accurate.

2014-06-30 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs in inst_adc() & inst_add() - flags affection.
          Fix potential bugs in inst_sll() & inst_rlc() - reg.X & reg.Y might exceed 0xffff.
        * sim/ucsim/stm8.src/stm8.cc:
          Improve code quality.

2014-06-25 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs of flags affection in inst_sbc() and inst_cpw().
        * sim/ucsim/stm8.src/stm8.cc:
          Fix potential bugs of flags affection in RLWA, and improve code quality of TRAP.

2014-06-21 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs of flags affection in inst_addw(), inst_sub() and inst_cp().
        * sim/ucsim/stm8.src/stm8.cc: